micro-evtd (3.4-4) UNRELEASED; urgency=medium

  * Bump to dh compat level 9 to get dpkg-buildflags support.
  * Add -DNO_GPIO to CPPFLAGS to workaround /dev/mem no longer being
    readable since CONFIG_STRICT_DEVMEM was enabled. (Closes: #845559)

 -- Ryan Tandy <ryan@nardis.ca>  Wed, 30 Nov 2016 21:19:30 -0800

micro-evtd (3.4-3) unstable; urgency=medium

  * Support device-tree enabled kernel

 -- Roger Shimizu <rogershimizu@gmail.com>  Sat, 13 Feb 2016 16:06:51 +0900

micro-evtd (3.4-2) unstable; urgency=low

  * debian/udeb/micro-evtd.command: Fixed bashisms. Thanks to Martin Michlmayr
    for the report and patch. (Closes: #666218)
  * debian/copyright: Update Format URL and debian/ copyright declaration. 
  * debian/control: Update Standards-Version to 3.9.3.
  * debian/patches/bashisms.patch: Patch out remaining bashisms from scripts.
  * debian/patches/dont-copy-eventscript.patch: Place runtime files (e.g.
    micro-evtd.status) in /var/run instead of next to the program.
  * debian/micro-evtd.postinst: Clean up runtime files accidentally placed
    into /usr/sbin in previous revision.

 -- Ryan Tandy <ryan@nardis.ca>  Sun, 15 Apr 2012 19:14:52 -0700

micro-evtd (3.4-1) unstable; urgency=low

  * New upstream release.
    - no longer overlaps sprintf source and destination (closes: #534931)
    - corrected microapl buzzer operations (closes: #580549)
  * Dropped all Debian patches and changes to upstream files (man pages,
    Makefile) due to upstream changes.
  * Added buffalo-files.patch: removes references to Buffalo scripts not
    available in Debian (was previously a hunk in eventscript.patch)
  * Added dont-copy-eventscript.patch: disables copying event script to /tmp,
    details and rationale in README.Debian. (closes: #5153353)
  * Added watchfile and debian/urepack script; changed get-orig-source target
    in debian/rules to call uscan; dropped old get-orig-source script.
  * Switched to dpkg-source 3.0 (quilt) format.